<resources>
    <string name="app_name">Vinata</string>
    <string name="s">-</string>
    <string name="p">+</string>
    <string name="m">*</string>
    <string name="d">/</string>
    <string name="n0">0</string>
    <string name="n1">1</string>
    <string name="n2">2</string>
    <string name="n3">3</string>
    <string name="n4">4</string>
    <string name="n5">5</string>
    <string name="n6">6</string>
    <string name="n7">7</string>
    <string name="n8">8</string>
    <string name="n9">9</string>
    <string name="lp">(</string>
    <string name="rp">)</string>
    <string name="exp">^</string>
    <string name="eq">=</string>
    <string name="c">"     Clear      "</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
</resources>
