<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/vinata"
    >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="right"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/n0"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="54dp"
        android:gravity="right"/>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        >

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exp"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/custom_button"
        android:onClick="onClick1" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/n0"
        android:id="@+id/button2"
        android:layout_alignTop="@+id/button"
        android:layout_toRightOf="@+id/button"
        android:layout_toEndOf="@+id/button" android:background="@drawable/custom_button"
        android:onClick="onClick1" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eq"
        android:id="@+id/button3"
        android:layout_alignTop="@+id/button2"
        android:layout_toRightOf="@+id/button2" android:background="@drawable/custom_button"
        android:layout_toEndOf="@+id/button2"
        android:onClick="onClick" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/s"
        android:id="@+id/button4"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/button3" android:background="@drawable/custom_button"
        android:layout_toEndOf="@+id/button3"
        android:onClick="onClick1" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/n1"
        android:id="@+id/button5" android:background="@drawable/custom_button"
        android:layout_above="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onClick1" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/n2" android:background="@drawable/custom_button"
        android:id="@+id/button6"
        android:layout_alignTop="@+id/button5"
        android:layout_toRightOf="@+id/button5"
        android:layout_toEndOf="@+id/button5"
        android:onClick="onClick1" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/n3"
        android:id="@+id/button7" android:background="@drawable/custom_button"
        android:layout_alignBottom="@+id/button6"
        android:layout_toRightOf="@+id/button2"
        android:layout_toEndOf="@+id/button2"
        android:onClick="onClick1" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/p" android:background="@drawable/custom_button"
        android:id="@+id/button8"
        android:layout_alignTop="@+id/button7"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignStart="@+id/button4"
        android:onClick="onClick1" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/n4"
        android:id="@+id/button9" android:background="@drawable/custom_button"
        android:layout_above="@+id/button5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onClick1" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/n5"
        android:id="@+id/button10" android:background="@drawable/custom_button"
        android:layout_above="@+id/button5"
        android:layout_toRightOf="@+id/button5"
        android:layout_toEndOf="@+id/button5"
        android:onClick="onClick1" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/n6"
        android:id="@+id/button11" android:background="@drawable/custom_button"
        android:layout_alignTop="@+id/button10"
        android:layout_alignLeft="@+id/button7"
        android:layout_alignStart="@+id/button7"
        android:onClick="onClick1" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/m"
        android:id="@+id/button12"
        android:layout_above="@+id/button7"
        android:layout_toRightOf="@+id/button7"
        android:layout_toEndOf="@+id/button7" android:background="@drawable/custom_button"
        android:onClick="onClick1" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/n7"
        android:id="@+id/button13"
        android:layout_above="@+id/button9"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" android:background="@drawable/custom_button"
        android:onClick="onClick1" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/n8"
        android:id="@+id/button14"
        android:layout_alignTop="@+id/button13"
        android:layout_toRightOf="@+id/button9"
        android:layout_toEndOf="@+id/button9" android:background="@drawable/custom_button"
        android:onClick="onClick1" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/n9"
        android:id="@+id/button15"
        android:layout_alignTop="@+id/button14"
        android:layout_alignLeft="@+id/button11" android:background="@drawable/custom_button"
        android:layout_alignStart="@+id/button11"
        android:onClick="onClick1" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/d"
        android:id="@+id/button16"
        android:layout_alignTop="@+id/button15"
        android:layout_toRightOf="@+id/button11" android:background="@drawable/custom_button"
        android:layout_toEndOf="@+id/button11"
        android:onClick="onClick1" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c"
        android:id="@+id/button17"
        android:layout_above="@+id/button13" android:background="@drawable/custom_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="clear" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lp"
        android:id="@+id/button18" android:background="@drawable/custom_button"
        android:singleLine="true"
        android:layout_above="@+id/button15"
        android:layout_toLeftOf="@+id/button16"
        android:layout_toStartOf="@+id/button16"
        android:onClick="onClick1"
         />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rp"
        android:id="@+id/button19"
        android:layout_above="@+id/button16"
        android:layout_alignLeft="@+id/button16" android:background="@drawable/custom_button"
        android:layout_alignStart="@+id/button16"
        android:onClick="onClick1" />
</RelativeLayout>
</RelativeLayout>
